<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/competition_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/competition_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/competition_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/competition_name_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/competition_name_hint"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/winner_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/competition_name_edittext"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/winner_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/winner_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/winner_name_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/winner_name_hint"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/winner_name_edittext"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/date_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/date_hint"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/score_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_edittext"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/score_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/score_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/score_hint"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/comment_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/score_edittext"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/comment"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/comment_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comment_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/comment_hint"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comment_edittext"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginStart="122dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="148dp"
                android:layout_marginBottom="203dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/enregistrer" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

